Revert some `String.formatted()` changes due to readability (too long (140+ ch) lines)