@@ -113,7 +113,8 @@ public final class SetterlessProperty
         }
         // For [databind#501] fix we need to implement this but:
         if (_valueTypeDeserializer != null) {
-            ctxt.reportBadDefinition(getType(), "Problem deserializing 'setterless' property (\"%s\"): no way to handle typed deser with setterless yet".formatted(
+            ctxt.reportBadDefinition(getType(), String.format(
+                    "Problem deserializing 'setterless' property (\"%s\"): no way to handle typed deser with setterless yet",
                     getName()));
 //            return _valueDeserializer.deserializeWithType(p, ctxt, _valueTypeDeserializer);
         }
