@@ -288,7 +288,8 @@ public class BasicBeanDescription extends BeanDescription
                  */
                 Class<?> type = anyMethod.getRawParameterType(0);
                 if ((type != String.class) && (type != Object.class)) {
-                    throw new IllegalArgumentException("Invalid 'any-setter' annotation on method '%s()': first argument not of type `String` or `Object`, but %s".formatted(
+                    throw new IllegalArgumentException(String.format(
+                            "Invalid 'any-setter' annotation on method '%s()': first argument not of type `String` or `Object`, but %s",
                             anyMethod.getName(), ClassUtil.nameOf(type)));
                 }
                 return anyMethod;
@@ -300,7 +301,8 @@ public class BasicBeanDescription extends BeanDescription
                 Class<?> type = anyField.getRawType();
                 if (!Map.class.isAssignableFrom(type)
                         && !JsonNode.class.isAssignableFrom(type)) {
-                    throw new IllegalArgumentException("Invalid 'any-setter' annotation on field '%s': type is not instance of `java.util.Map` or `JsonNode`".formatted(
+                    throw new IllegalArgumentException(String.format(
+                            "Invalid 'any-setter' annotation on field '%s': type is not instance of `java.util.Map` or `JsonNode`",
                             anyField.getName()));
                 }
                 return anyField;
@@ -441,7 +443,8 @@ public class BasicBeanDescription extends BeanDescription
                 Class<?> type = anyGetter.getRawType();
                 if (!Map.class.isAssignableFrom(type)
                         && !JsonNode.class.isAssignableFrom(type)) {
-                    throw new IllegalArgumentException("Invalid 'any-getter' annotation on method '%s()': return type is not instance of `java.util.Map` or `JsonNode`".formatted(
+                    throw new IllegalArgumentException(String.format(
+                            "Invalid 'any-getter' annotation on method '%s()': return type is not instance of `java.util.Map` or `JsonNode`",
                             anyGetter.getName()));
                 }
                 return anyGetter;
@@ -453,7 +456,8 @@ public class BasicBeanDescription extends BeanDescription
                 Class<?> type = anyField.getRawType();
                 if (!Map.class.isAssignableFrom(type)
                         && !JsonNode.class.isAssignableFrom(type)) {
-                    throw new IllegalArgumentException("Invalid 'any-getter' annotation on field '%s': type is not instance of `java.util.Map` or `JsonNode`".formatted(
+                    throw new IllegalArgumentException(String.format(
+                            "Invalid 'any-getter' annotation on field '%s': type is not instance of `java.util.Map` or `JsonNode`",
                             anyField.getName()));
                 }
                 return anyField;
