@@ -54,7 +54,8 @@ public class PotentialCreators
             String mode, boolean explicit)
     {
         if (propertiesBased != null) {
-            throw new IllegalArgumentException("Conflicting property-based creators: already had %s creator %s, encountered another: %s".formatted(
+            throw new IllegalArgumentException(String.format(
+                    "Conflicting property-based creators: already had %s creator %s, encountered another: %s",
                     mode, propertiesBased.creator(), ctor.creator()));
         }
         propertiesBased = ctor.introspectParamNames(config);
